# windevtest

./: .gitignore  CMakeLists.txt  README.md  build-installer.bat  build.bat  vcpkg-configuration.json  vcpkg.json
cert/: PrintDriver.cer  PrintDriver.pfx
downloads/: 52c471565c7dae0d
installer/: PrintDriver.iss
scripts/: create-cert.ps1  sign-exe.ps1
src/: computer_manager.c  computer_manager.h  config.h  device_id.c  device_id.h  file_downloader.c  file_downloader.h  http_client.c  http_client.h  json_test.c  login_dlg.c  login_dlg.h  main.c  print_core.c  print_core.h  print_job.c  print_job.h  printer_manager.c  printer_manager.h  resource.h  resource.rc  ui.c  ui.h  updater.c  updater.h  version.h  version.h.in  websocket.c  websocket.h  websocket_test.c
